Added the underlying folderstructure to fxui/scr/test