@@ -67,11 +67,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
         		<artifactId>maven-surefire-plugin</artifactId>
 		        <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>
-                    --add-opens personal_finance.ui/personal_finance.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
-                </configuration>
 	        </plugin>
 
             <plugin>
